<resources>

    <string name="alivc_beauty">Face Filter</string>
    <string name="alivc_fine_tune">Makeup</string>

    <string name="beauty_whitening">Skin Whitening</string>
    <string name="beauty_buffing">Skin Polishing</string>
    <string name="beauty_blush">Skin Shining</string>
    <string name="beauty_lip_gloss">Blusher</string>
    <string name="beauty_short_jaw">Shorten Jaw</string>

    <string name="beauty_on">Beauty on</string>
    <string name="beauty_off">Beauty off</string>
    <string name="beauty_white">Whitening</string>
    <string name="beauty_skin_smooth">Smooth skin</string>
    <string name="beauty_ruddy">Ruddy</string>
    <string name="beauty_brightness">Brightness</string>
    <string name="beauty_cheekpink">CheekPink</string>
    <string name="beauty_thinface">SlimFace</string>
    <string name="beauty_shortenface">ShortenFace</string>
    <string name="beauty_bigeye">BigEye</string>

    <string name="no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="no_read_external_storage_permission">External storage is not permitted to read, please open first</string>

    <string name="no_music">No Music</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="close_loop">Close Loop</string>
    <string name="open_loop">Open Loop</string>
    <string name="close_mute">Close Mute</string>
    <string name="open_mute">Open Mute</string>
    <string name="close_ears_back">Close Ears</string>
    <string name="open_ears_back">Open Ears</string>
    <string name="close_audio_denoise">Close Denoise</string>
    <string name="open_audio_denoise">Open Denoise</string>
    <string name="accompaniment">Accompaniment</string>
    <string name="voice">Voice</string>
    <string name="internet_music">Internet music</string>

    <string name="ok">OK</string>
    <string name="dialog_title">Error tips</string>

    <string name="live_scene_list">Scene list of live</string>
</resources>
