<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="234dp"
    android:clickable="true"
    android:orientation="vertical">

    <com.aliyun.pusher.core.view.BeautySeekBar
        android:id="@+id/beauty_seekbar"
        android:layout_width="match_parent"
        android:layout_height="49dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="#4D1C1F21">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@mipmap/icon_back"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/alivc_beauty"
                android:textColor="#ffffff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/alivc_fine_tune"
                android:textColor="#ffffff"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/iv_reset"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:src="@drawable/icon_reset" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="44.5dp"
            android:background="#c3c5c6" />

        <HorizontalScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="85.5dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/beauty_detail_group"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/beauty_buffing"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_buffing"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_whitening"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_whitening"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_ruddy"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_ruddy"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_shorten_jaw"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_short_jaw"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_bigeye"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_big_eye"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_thin_face"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_thin_face"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/beauty_red_lips"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/alivc_beauty_default_bt_selector"
                        android:button="@null"
                        android:drawableStart="@drawable/icon_checkpink"
                        android:gravity="center"
                        android:padding="10.5dp"
                        android:textColor="#ffffff"
                        android:textSize="14dp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_buffing"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_whitening"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_blush"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_short_jaw"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_bigeye"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_thinface"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/beauty_lip_gloss"
                        android:textColor="#c3c5c6"
                        android:textSize="12dp" />

                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>
</LinearLayout>